@@ -1,10 +1,11 @@
 package com.example.demo.model;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
  * Created by Артем on 30.03.2019.
  */
 public class Questions {
-    public static final List<String> questions = List.of("1. Вопрос 1", "2. Вопрос 2", "3. Вопрос 3");
+    public static final List<String> questions = Arrays.asList("1. Вопрос 1", "2. Вопрос 2", "3. Вопрос 3");
 }
